--- a/game/.gitignore
+++ b/game/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+php
 
 # Editor directories and files
 .vscode/*
@@ -23,4 +24,4 @@ dist-ssr
 *.sln
 *.sw?
 database.txt
-php/*
+.php/
